modificar build.gradle y especificar las versiones de la dependencias

--- a/build.gradle
+++ b/build.gradle
@@ -4,25 +4,27 @@ plugins {
 }
 
 group = 'com.colibrihub'
-version = '1.0.0'  // Cambia de SNAPSHOT a una versión estable
+version = '1.0.12'  // Cambia de SNAPSHOT a una versión estable
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
+    implementation platform('org.springframework.boot:spring-boot-dependencies:3.1.2')
+
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
-    implementation 'org.springframework.boot:spring-boot-starter'
-    compileOnly 'org.projectlombok:lombok'
-    annotationProcessor 'org.projectlombok:lombok'
+    implementation 'org.springframework.boot:spring-boot-starter:3.1.2'
+    compileOnly 'org.projectlombok:lombok:1.18.28'
+    annotationProcessor 'org.projectlombok:lombok:1.18.28'
+
 }
 
 test {
     useJUnitPlatform()
 }
 
-// Configuración necesaria para JitPack
 java {
     withSourcesJar()
     withJavadocJar()
